--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "ukradlimi",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://xendo.github.io/ukradlimi",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^16.0.0",
     "react-autocomplete": "^1.7.2",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
   },
@@ -12,7 +15,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "devDependencies": {
     "gh-pages": "^1.0.0"
